<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/teal_200"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="319dp"
        android:layout_height="40dp"
        android:layout_marginTop="180dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/teal_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="319dp"
        android:layout_height="40dp"
        android:textColor="@color/teal_700"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.05" />

    <Button
        android:id="@+id/button1"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="345dp"
        android:backgroundTint="@color/black"
        android:text="@string/_1"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:layout_marginTop="345dp"
        android:layout_marginStart="10dp"
        android:backgroundTint="@color/black"
        android:text="@string/_2"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:layout_marginTop="345dp"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        android:backgroundTint="@color/black"
        android:text="@string/_3"
        android:textColor="@color/white"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:backgroundTint="@color/black"
        android:text="@string/_4"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <Button
        android:id="@+id/button5"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:text="@string/_5"
        android:textSize="20sp"
        android:layout_marginStart="10dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/black"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button9"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:text="@string/_9"
        android:backgroundTint="@color/black"
        android:textSize="20sp"
        android:layout_marginStart="10dp"
        android:textStyle="italic"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/button6"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:text="@string/_6"
        android:textSize="20sp"
        android:layout_marginStart="10dp"
        android:backgroundTint="@color/black"
        android:textStyle="italic"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button7"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:backgroundTint="@color/black"
        android:text="@string/_7"
        android:textSize="20sp"
        android:textStyle="italic"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button8"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:text="@string/_8"
        android:textSize="20sp"
        android:backgroundTint="@color/black"
        android:textStyle="italic"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@+id/button7"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button00"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:backgroundTint="@color/black"
        android:text="@string/_00"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/button0"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:text="@string/_0"
        android:backgroundTint="@color/black"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="italic"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@+id/button00"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <Button
        android:id="@+id/buttondot"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:text="@string/decimal"
        android:textSize="20sp"
        android:layout_marginStart="10dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/black"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/button0"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <Button
        android:id="@+id/buttonplus"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:layout_marginTop="345dp"
        android:layout_marginEnd="10dp"
        android:text="@string/plus"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonminus"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:layout_marginEnd="10dp"
        android:text="@string/minus"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonplus" />

    <Button
        android:id="@+id/buttonmult"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:layout_marginEnd="10dp"
        android:text="@string/x"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonminus" />

    <Button
        android:id="@+id/buttondiv"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:layout_marginEnd="10dp"
        android:text="@string/division"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonmult" />

    <Button
        android:id="@+id/buttonclear"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="280dp"
        android:text="@string/_C"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonequal"
        android:layout_width="319dp"
        android:layout_height="60dp"
        android:layout_marginEnd="10dp"
        android:text="@string/equal"
        android:layout_marginStart="10dp"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttondiv" />

    <Button
        android:id="@+id/buttonx"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="280dp"
        android:text="@string/clearx"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/buttonclear"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonsign"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="280dp"
        android:text="@string/sign"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/buttonx"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="10dp"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>